--- a/SpringData/src/main/resources/application.properties
+++ b/SpringData/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=none
 
 #InBuild Database
 spring.h2.console.enabled=true
+
+logging.level.root=INFO
+logging.path=/log/Application.log
